Started work on Ptanja Pastiru pages
Created Controller, Model and Views for Ptanja Pastiru part of the site.

Also, cleaned up some more data access.

--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
@@ -124,12 +124,12 @@
             <!-- Pastir -->
             <div class="row">
                 <div class="span8">
-                    <h2> @Html.ActionLink("Питање пастиру", "Pastir") »</h2>
+                    <h2> @Html.ActionLink("Питање пастиру", "Index", "Pastir") »</h2>
 
                     <ul>
                     @foreach (PitanjeInfo q in Model.Pastir)
                     {
-                       <li> <a href="http://www.svetosavlje.org/pastir/index.php?qa=@q.Broj">@q.Naslov</a> </li>
+                        <li>@Html.ActionLink(q.Naslov, "Item", "Pastir", new{id = q.Broj}, null)</li>
                     }
                     </ul>
                 </div>
