--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -72,8 +72,8 @@
               </a>
               <div class="nav-collapse">
                 <ul class="nav">
-                  <li class="active">@Html.ActionLink("Светосавље.орг", "Index")</li>
-                  <li>@Html.ActionLink("Питање пастиру", "Pastir")</li>
+                  <li class="active">@Html.ActionLink("Светосавље.орг", "Index", "Home")</li>
+                  <li>@Html.ActionLink("Питање пастиру", "Index", "Pastir")</li>
                   <li>@Html.ActionLink("Пролог", "Prolog")</li>
                   <li>@Html.ActionLink("Молитве", "Molitve")</li>
                   <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx">Листа</a></li>
