--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -1,33 +1,24 @@
 ﻿<!doctype html>
 <html>
 <head>
-
     <title>@ViewBag.Title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+@*    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script type="text/javascript">        window.jQuery || document.write('<script src="@Url.Content("~/Scripts/libs/jquery-1.7.1.min.js")"><\/script>') </script>
-    
     <script src="@Url.Content("~/Scripts/libs/bootstrap/transition.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/libs/bootstrap/collapse.js")"   type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/libs/bootstrap/tab.js")"        type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/libs/bootstrap/dropdown.js")"   type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/libs/bootstrap/carousel.js")"   type="text/javascript"></script>
-
     <script src="@Url.Content("~/Scripts/script.js")" type="text/javascript"></script>
-
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" />
-
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-	<meta name="description" content="" />
-	<meta name="author" content="" />
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<!--
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" />*@
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--
 	<link rel="stylesheet/less" href="less/style.less">
     <script src="js/libs/less-1.2.1.min.js"></script>
 	Use SimpLESS (Win/Linux/Mac) or LESS.app (Mac) to compile your .less files
@@ -35,69 +26,75 @@
 
 	<link rel="stylesheet/less" href="less/style.css">
 	 -->
-
-	<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
 	<script src="js/libs/html5-3.4-respond-1.1.0.min.js"></script>
 	<![endif]-->
-
-<script type="text/javascript">
-    $(function () {
-        $('.tabs a:last').tab('show')
-        $('.dropdown-toggle').dropdown()
-        $('.carousel').carousel({ interval: 5000 })
-    })
-</script>
-
-<script type="text/javascript">
-    (function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-        fjs.parentNode.insertBefore(js, fjs);
-    } (document, 'script', 'facebook-jssdk'));
-</script>
-
-
+    <script type="text/javascript">
+        $(function () {
+            $('.tabs a:last').tab('show')
+            $('.dropdown-toggle').dropdown()
+            $('.carousel').carousel({ interval: 5000 })
+        })
+    </script>
+    <script type="text/javascript">
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+            fjs.parentNode.insertBefore(js, fjs);
+        } (document, 'script', 'facebook-jssdk'));
+    </script>
 </head>
 <body>
-<!-- glavna navigacija -->
+    <!-- glavna navigacija -->
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </a>
-              <div class="nav-collapse">
-                <ul class="nav">
-                  <li class="active">@Html.ActionLink("Светосавље.орг", "Index", "Home")</li>
-                  <li>@Html.ActionLink("Питање пастиру", "Index", "Pastir")</li>
-                  <li>@Html.ActionLink("Пролог", "Prolog")</li>
-                  <li>@Html.ActionLink("Молитве", "Molitve")</li>
-                  <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx">Листа</a></li>
-                  <li>@Html.ActionLink("Библиотека", "Biblioteka")</li>
-                  <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
-                  <li><a href="http://www.svedokverni.org/">Мисија</a></li>
-                  <li>@Html.ActionLink("Појање", "Pojanje")</li>
-                  <li>@Html.ActionLink("Светиње", "Svetinje")</li>
-                  <li>@Html.ActionLink("Црквенословенски језик", "Crkvenoslovenski")</li>
-                </ul>
-              </div><!--/.nav-collapse -->
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                </a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li class="active">@Html.ActionLink("Светосавље.орг", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Питање пастиру", "Index", "Pastir")</li>
+                        <li>@Html.ActionLink("Пролог", "Prolog", "Home")</li>
+                        <li>@Html.ActionLink("Молитве", "Molitve", "Home")</li>
+                        <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx">Листа</a></li>
+                        <li>@Html.ActionLink("Библиотека", "Biblioteka", "Home")</li>
+                        <li><a href="http://blogs.svetosavlje.org/vesti/">Вести</a></li>
+                        <li><a href="http://www.svedokverni.org/">Мисија</a></li>
+                        <li>@Html.ActionLink("Појање", "Pojanje", "Home")</li>
+                        <li>@Html.ActionLink("Светиње", "Svetinje", "Home")</li>
+                        <li>@Html.ActionLink("Црквенословенски језик", "Crkvenoslovenski", "Home")</li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
             </div>
         </div>
-    </div><!-- navbar -->
+    </div>
+    <!-- navbar -->
+    <div class="container">
+        <div class="HeaderSection">
+            @if (IsSectionDefined("HeaderSection"))
+            {
+                @RenderSection("HeaderSection")
+            }
+            else
+            {
+                <!-- logo i slika oca Justina -->
+                <div class="row">
+                    <div class="span6">
+                        <img src="http://dummyimage.com/530x150/666/fff&amp;text=slika+oca+justina+i+logo+svetosavlje+ide+ovde" width="60%">
+                    </div>
+                </div>
+                <!-- row -->            }
+        </div>
+        <hr />
 
-
-<div class="container">
-
-    @RenderBody()
-
-</div>
-
-
-<div id="fb-root"></div>
-
+        @RenderBody()
+    </div>
+    <div id="fb-root">
+    </div>
 </body>
 </html>
