--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_PastirQuestions.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_PastirQuestions.cshtml
@@ -7,7 +7,7 @@
     <ol>
         @foreach (PitanjeInfo q in Model.PastirQuestions)
         {
-            <li>@Html.ActionLink(q.Naslov, "Item", "Pastir", new { id = q.ID }, null)</li>
+            <li>@Html.ActionLink(q.Naslov, "PitanjeOdgovor", "Pastir", new { id = q.ID }, null)</li>
         }
     </ol>
 }
@@ -16,7 +16,7 @@ else
     <ul>
         @foreach (PitanjeInfo q in Model.PastirQuestions)
         {
-            <li>@Html.ActionLink(q.Naslov, "Item", "Pastir", new { id = q.ID }, null)</li>
+            <li>@Html.ActionLink(q.Naslov, "PitanjeOdgovor", "Pastir", new { id = q.ID }, null)</li>
         }
     </ul> 
 }
