Prolog - 1st draft
Frame for Prolog. Missing calendar, search page formatting

--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                     <ul class="nav">
                         <li class="active">@Html.ActionLink("Светосавље.орг", "Index", "Home")</li>
                         <li>@Html.ActionLink("Питање пастиру", "Index", "Pastir")</li>
-                        <li>@Html.ActionLink("Пролог", "Prolog", "Home")</li>
+                        <li>@Html.ActionLink("Пролог", "Index", "Prolog")</li>
                         <li>@Html.ActionLink("Молитве", "Molitve", "Home")</li>
                         <li><a href="http://www.svetosavlje.org/listarhiva/Home.aspx">Листа</a></li>
                         <li>@Html.ActionLink("Библиотека", "Biblioteka", "Home")</li>
