--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -5,15 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-@*    <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-    <script type="text/javascript">        window.jQuery || document.write('<script src="@Url.Content("~/Scripts/libs/jquery-1.7.1.min.js")"><\/script>') </script>
-    <script src="@Url.Content("~/Scripts/libs/bootstrap/transition.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/libs/bootstrap/collapse.js")"   type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/libs/bootstrap/tab.js")"        type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/libs/bootstrap/dropdown.js")"   type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/libs/bootstrap/carousel.js")"   type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/script.js")" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" />*@
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/themes/base/css", "~/Content/css") 
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="" />
     <meta name="author" content="" />
