--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                   <img src="http://placehold.it/160x120" width="80" height="120" style="float: left;margin:0 20px 20px 0;" />
                   @foreach (string sv in Model.DnevniSveti)
                   {
-                     @Html.ActionLink(sv, "Prolog")<br />
+                     @Html.ActionLink(sv, "Index", "Prolog")<br />
                   }
                   <a href="#">(Житија Светих за данас)</a>
               </div>
