--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacDusan.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacDusan.cshtml
@@ -2,4 +2,100 @@
     ViewBag.Title = "OtacDusan";
 }
 
-<h2>OtacDusan</h2>
+<h2>Отац Душан</h2>
+
+<!-- body begins -->
+<body leftMargin="0" background="../bmp/bck.gif" topMargin="0" marginheight="0" marginwidth="0">
+<table cellSpacing="0" cellPadding="0" width="760" border="0">
+ <tr>
+  <td vAlign="top" width="155" bgColor="#FFF9F3"> <table cellSpacing="0" cellPadding="0" width="155" bgColor="#fcfaf1" border="0">
+    <tr>
+     <td><IMG height="245" alt="Свети Јустин Ћелијски" src="../bmp/avva.gif" width="155"></td>
+    </tr>
+    <tr>
+     <td><img src="../bmp/izbornik.gif" width="155" border="0" usemap="#Map"></td>
+    </tr>
+   </table></td>
+  <td width="1" bgColor="#000000"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+  <td width="1"><IMG height="1" src="../bmp/spacer.gif" width="20"></td>
+  <td vAlign="top" width="100%"><table cellSpacing="0" cellPadding="0" width="100%" border="0">
+    <tr>
+     <td class="helper" align="left" height="20"><A class="helpernav" href="../uvodnik.htm">Уводник</A> :: <A class="helpernav" href="../novosti.asp">Новости</A> :: <A class="helpernav" href="../mapa.htm">Мапа</A> :: <A class="helpernav" href="../adresar/index.asp"> Адресар</A> :: <A class="helpernav" href="../komentar/index.asp">Коментар</A> :: <A class="helpernav" href="../pomoc/index.htm"> Помоћ</A>&nbsp;&nbsp;</td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td align="right"><IMG height="118" hspace="20" src="../bmp/pastiru.gif" width="216" vspace="5"></td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td class="helper" height="20"><A class="helpernav" href="../index.php">Светосавље.орг</A>:: <A class="helpernav" href="index.asp">Питање пастиру</A></td>
+    </tr>
+    <tr>
+     <td><p>&nbsp;</p>
+      <p><img src="bmp/o_dusan.jpg" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
+      <h3>Протојереј Ставрофор<br>
+      Душан Колунџић</h3>
+      <p>Душан Колунџић рођен је у селу Бучје, општина Пакрац, од оца Мирка, бојадисара и мајке Милије, домаћице 1. јуна 1938. године. Основну школу је завршио у Пакрацу 1952. године и тада се уписао у Богословију Светог Саве у Манстиру Раковица, код Београда. По завршетку Богословије уписао се 1957. године на Богословски, а 1959. године и на Философски факултет, Отсек за Историју уметности, а завршио их је 1963, односно 1965. године. 1. априла 1966. године запошљава се у Патријаршијској управној канцеларији и ради на пословима у Београду и Патријаршијском добру у Даљу. Од школске 1967/68. године постаје суплент, а од 1971. професор практичне групе богословсих предмета у Сремским Карловцима. Као професор Богословије сарађивао је у готово свим црквеним листовима, а објавио је и књигу „Вера и молитва“, као и два помоћна уџбеника из Литургике: „Хришћанска уметност“ и „Празнична богослужења“. На позив Епископа Лаврентија, одлази августа 1974. године у Диселдорф, где обавља дужност секретара Епахије западноевропске, коректора Епархијске штампарије и уредника епархијских издања. 1975. године покреће и уређује епархијски лист ЦРКВА, који и данас излази, у тиражу од 12.000 примерака. Са Епископом Лаврентијем почео је издавање сабраних дела Владике Николаја. За ђакона је рукоположен на Празник сабора Срба Светитеља у Штутгарту, а за презвитера на дан Преподобне матере Параскеве у Дармштату 1974. године.</p>
+	  	  
+      <p>Марта 1977. године прелази на парохију у Нирнберг, где ће остати све до пензионисања, јуна 2004. године. Као парох у Нирнбергу почео је, први у Српској цркви, да пише и умножава Парохијско писмо, које је осам пута годишње слао свим својим парохијанима. Укупно је верницима послао 184 писма, које је касније, тематски, сабрао у две књиге од по 300 страница, па и њих послао на око 1200 адреса парохијана. За овај јединствен начин општења са верницима, а и због изузетне садржајности Писама, примљен је 2002. године у Удружење књижевника Србије. Покренио је и едицију „Мала религиозна библиотека“, у којој су, у више од 100.000 примарека, штампане књижице: „Народ Божји“ (Стари завет), „Живот Господа Исуса Христа“, „Чуда Господа Исуса Христа“, „Објашњење Свете литургије“, „Одговарања на Светој литругији и Чин изобразитељне“, „Упокој Господе у вери почивше“ (Читуља), „О Крсној слави“, „Који се у Христа крстисте – у Христа се обукосте“ (приручник за родитеље, кумове и одрасле катихумене). Штампао је и илустровани приручник за веронауку „Живот Господа Исуса Христа“ и „Богослужење Православне цркве“. Објавио је старозаветну књигу „О Јову“, као и „Јеванђеље по Луки“, поводом године Библије 2003. године. Обрадио је, као славске честитке, 85 Крсних слава, са житијама Светих и славским обележјима. </p>
+      
+      <p>Од школске 1977/78. па до 1992/93. године предавао је у деветогодишњој основној, тзв. „Југословенској“ школи у Нирнбергу веронауку, некад и по 26 часова недељно, без икакве материјалне накнаде и поред свих парохијских обавеза, на терену пречника 300 км и шест богослужбених места. За Основну школу и Реалну гимназију начинио је програм верске наставе, који је одобрило Министарство за просвету и култ у Минхену.</p>
+      
+      <p>Године 1981, одликован је чином протојереја, 1982. је постављен за архијерејског намесника за Јужну Немачку (на којој дужности је остао до пензионисања), а 1999. године одликован је правом ношења напрсног крста. Са верницима нирнбершке парохије купио је цркву у Нирнбергу и адаптирао за православна богослоужења (иконостас, тронови, стасије, витражи на прозорима), а троносана је 1999. године.</p>
+      
+      <p>После пензионисања 2004. године живи у славонском селу Бијело Брдо код Осијека, Епархија осечкопољска и барањска. Редовно служи у тој, као и суседним епархијама, проповеда и држи предавања на разне теме, уређује и води свакодневну емисију на Радио Борову и припрема ходочаснике за Манастир Хиландар. Тренутно је завршио Први шематизам Епархије осечкопољске и барањске.</p>
+      <p>Са супругом Катицом има два сина, Мирка, менаџера у Бечу и јереја Радомира, пароха у Дортмунду.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p></td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td class="helper" align="right" height="20"><table cellSpacing="0" cellPadding="10" width="100%" border="0">
+       <tr>
+        <td vAlign="bottom" width="215"><em><font size="1">© 2003 Светосавље.орг<br>
+         Сва права задржана.</font></em></td>
+        <td class="helper" vAlign="top" align="right" width="243">[<a href="../index.php" class="helpernav">Светосавље.орг</a>]<br>
+         [<a href="../biblioteka/index.htm" class="helpernav">Библиотека</a>]<br>
+	 [<a href="../molitve/index.php" class="helpernav">Молитве</a>]<br>
+         [<a href="../riznice/index.htm" class="helpernav">Ризнице</a>]<br>
+         [<a href="../pojanje/index.htm" class="helpernav">Појање</a>]<br>
+         [<a href="../svetinje/index.htm" class="helpernav">Светиње</a>]<br>
+         [<a href="../slovenski/index.htm" class="helpernav">ЦрквеноСловенски језик</a>]<br>
+         [<a href="../pastir/index.php" class="helpernav">Питање пастиру</a>]<br>
+	 [<a href="http://blogs.svetosavlje.org/vesti/" class="helpernav">Вести</a>]<br>
+         [<a href="../lista/index.php" class="helpernav">Листа</a>]<br>
+         [<a href="../roditelji/uvodnik.html" class="helpernav">Родитељска Листа</a>]<br>
+         [<a href="http://www.svedokverni.org/" class="helpernav">Мисија</a>]</td>
+        <td width="66" valign="top" class="helper">[<a href="../uvodnik.htm" class="helpernav">Уводник</a>]<br>
+         [<a href="../novosti.asp" class="helpernav">Новости</a>]<br>
+         [<a href="../mapa.htm" class="helpernav">Мапа</a>]<br>
+         [<a href="../adresar/index.asp" class="helpernav">Адресар</a>]<br>
+         [<a href="../komentar/index.asp" class="helpernav">Коментар</a>]<br>
+         [<a href="../pomoc/index.htm" class="helpernav">Помоћ</a>]</td>
+       </tr>
+      </table></td>
+    </tr>
+   </table></td>
+ </tr>
+</table>
+<map name="Map">
+  <area shape="rect" coords="38,16,137,34" href="../biblioteka/index.htm">
+  <area shape="rect" coords="64,44,140,66" href="../molitve/index.php">
+  <area shape="rect" coords="67,79,141,97" href="../riznice/index.htm">
+  <area shape="rect" coords="77,110,140,128" href="../pojanje/index.htm">
+  <area shape="rect" coords="61,143,140,161" href="../svetinje/index.htm">
+  <area shape="rect" coords="62,175,141,226" href="../slovenski/index.htm">
+  <area shape="rect" coords="67,237,139,273" href="../pastir/index.php">
+  <area shape="rect" coords="75,287,139,305" href="http://blogs.svetosavlje.org/vesti/">
+  <area shape="rect" coords="74,319,138,337" href="../lista/index.php">
+  <area shape="rect" coords="36,345,143,384" href="../roditelji/uvodnik.html">
+  <area shape="rect" coords="80,394,145,415" href="http://www.svedokverni.org/">
+</map>
+</body>
+<!-- body ends -->
