--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacSrboljub.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacSrboljub.cshtml
@@ -3,3 +3,106 @@
 }
 
 <h2>Протојереј-ставрофор Србољуб Милетић</h2>
+
+<!-- body begins -->
+<body leftMargin="0" background="../bmp/bck.gif" topMargin="0" marginheight="0" marginwidth="0">
+<table cellSpacing="0" cellPadding="0" width="760" border="0">
+ <tr>
+  <td vAlign="top" width="155" bgColor="#FFF9F3"> <table cellSpacing="0" cellPadding="0" width="155" bgColor="#fcfaf1" border="0">
+    <tr>
+     <td><IMG height="245" alt="Свети Јустин Ћелијски" src="../bmp/avva.gif" width="155"></td>
+    </tr>
+    <tr>
+     <td><img src="../bmp/izbornik.gif" width="155" border="0" usemap="#Map"></td>
+    </tr>
+   </table></td>
+  <td width="1" bgColor="#000000"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+  <td width="1"><IMG height="1" src="../bmp/spacer.gif" width="20"></td>
+  <td vAlign="top" width="100%"><table cellSpacing="0" cellPadding="0" width="100%" border="0">
+    <tr>
+     <td class="helper" align="left" height="20"><A class="helpernav" href="../uvodnik.htm">Уводник</A> :: <A class="helpernav" href="../novosti.asp">Новости</A> :: <A class="helpernav" href="../mapa.htm">Мапа</A> :: <A class="helpernav" href="../adresar/index.asp"> Адресар</A> :: <A class="helpernav" href="../komentar/index.asp">Коментар</A> :: <A class="helpernav" href="../pomoc/index.htm"> Помоћ</A>&nbsp;&nbsp;</td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td align="right"><IMG height="118" hspace="20" src="../bmp/pastiru.gif" width="216" vspace="5"></td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td class="helper" height="20"><A class="helpernav" href="../index.php">Светосавље.орг</A>:: <A class="helpernav" href="index.asp">Питање пастиру</A></td>
+    </tr>
+    <tr>
+     <td><p>&nbsp;</p>
+      <p><img src="bmp/o_srboljub.jpg" width="255" height="354" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
+      <h3>Протојереј-ставрофор Србољуб Милетић</h3>
+      <p>Рођен 14. новембра 1953 у Крушевцу од оца Милуна Милетића, редовног професора богословије у Призрену, и мајке Оливере рођ. Аврамовић, хемичара.</p>
+      <p>Основну школу је започео у Рибару код Крушевца, наставио у Призрену и завршио у Товаришеву код Бачке Паланке.</p>
+      <p>Септембра 1968. уписао је Богословију Св. Арсенија у Сремским Карловцима, године 1971. прелази у богословију у ман. Крки, Далмација, а потом у Београд, да би завршио у Призрену и матурирао у септембру 1973. године. Након тога уписао је богословски факултет у Београду. У току студија три пута је одлазио у ман. Хилендар и на Св. Гору, као и на поклоничко путовање у Јерусалим, о Ускрсу 1979. Певао је у хору студената Богословског факултета као и у Првом Београдском певачком друштву, под управом диригента Георгија Максимовића, са којим је наступао и у Грчкој о Божићу 1980 год. У току студија одслужио је и војни рок у Битољу, од 17. децембра 1975. до 7. марта 1977. године. Дипломирао је на Богословском факултету 15. септембра 1982. године.</p>
+      <p>У Аустралију се досељава 1. јануара 1983. године и укључује у живот и рад Српске цркве на овом континенту. Био је најпре члан Одбора, а потом и подпредседник Српског православног удружења Св. Сава у Сиднеју, у оквиру чијег рада је предавао српски језик и веронауку деци у готово свим парохијама СПЦ у Сиднеју. За потребе ових школа Србољуб Милетић је саставио 4 уџбеника за српски језик која су одобрена од стране државног оделења за просвету и штампана у издању Удружења Св. Сава, као и један уџбеник из веронауке. Био је дугогодишњи добровољни сарадник државног СБС радио програма на српском језику у Сиднеју, за прилоге из Православне вере, српске историје и културе. Такође, добровољни сарадник а потом и уредник од 1986 - 1988 Српског православног радио програма Удружења Св. Сава, на радију 2СЕР ФМ у Сиднеју. Почетком 80-тих је заједно са о. Милорадом Лончаром водио запажене трибине &quot;Разговори о вери&quot; за омладину а посебно за старије. Десетак година (од 1984 - 1994.) је организовао семинаре на којима се сваке године окупљало по неколико стотина младих Срба из целе Аустралије, са гостима предавачима из Отаџбине, као што су Митр. Амфилохије, Еп. Атанасије, Еп. Данило, и други. Као резултат тога, многи млади су се обратили вери и постали активни у Цркви, а предавања са њих штампана су у виду брошуре сваке године. У издању Епархије аустралијско-новозеландске 1995. године, он је сва ова предавања за омладину издао као посебну књигу на енглеском језику, под називом &quot;Српска вера и нација&quot;. </p>
+      <p>Водио је, организовао и учествовао у многим другим пројектима ове Епархије, као што је била прослава 600-годишњице Косовске битке у Аустралији 1989. године, на којој су из отаџбине гостовали: хор Богословског факултета СПЦ, протођакони Владо Микић и Радомир Перчевић, књижевник Антоније Ђурић и глумац Тихомир Арсић, а такође је организовао и сликарску изложбу од 24 платна са мотивима Косовске битке, аутора Миодрага Тодоровића Рубљова из Врњачке Бање. Са ове прославе Србољуб је припремио за штампу у издању Епархије аустралијско-новозеландске књигу &quot;Косовски зборник&quot; на српском и енглеском, а такође, видео касету прославе и аудио касету са снимцима хора студената Богословског факултета СПЦ, снимљену у студију СБС у Сиднеју. Хор је за овај снимак ауторска права поклонио Епархији аустралијско-новозеландској.</p>
+      <p>Србољуб Милетић је преводио многе чланке и радове са енглеског и руског језика, као и књигу &quot;Против лажног јединства&quot; Др. Александра Каломироса, која је до сада доживела три издања на српском 1990, 1995 и 1998 године. Био је аутор многих чланака и есеја из области теологије, историје, културе, и црквеног живота, који су штампани у Аустралији (Светосавље, Светосавски весник, Спрски глас и Светски српски глас, Новости, Дуга, Српска слога), у Америци и Канади (Источник, Светосавље), као и у разним листовима у Отаџбини (Православље, Светигора, Хришћанска мисао, Теолошки погледи, Богословље, Геополитика, Гласник - службени лист СПЦ, Интервју, Дабар - Епархије дабробосанске), и т.д. </p>
+      <p>За потребе Епархије Србољуб је био секретар и технички уредник епархијског листа Светосавље, од 1984 - 1990, а потом и Уредник од 1991 - 2000. Издавао је и парохијски билтен Парохија, 1995 - 2004.</p>
+      <p>Држао је предавање о језику на симпозијуму теолога у Београду 1987. године, и био гостујући предавач на Студијама српског језика на Меквори универзитету у Сиднеју, где је такође током 80-тих година учествовао у раду Фондације за Српске студије и био један од њених вишегодишњих чланова.</p>
+      <p>За првог сталног секретара Епархије аустралијско-новозеландске, са седиштем у Мелбурну, постављен је од стране епископа Лонгина 1990. године. На овој дужности је радио на унапређењу епархијске администрације, трудио се на црквеној организацији и поретку, као и на јединству СПЦ које је управо у то време, након Америчког раскола из 1963. почињало да оживљује великим трудом и залагањем епископа две аустралијске епархије Лонгина и Василија, као и њихових наследника. У својству секретара путовао је у Јужну Африку и на Нови Зеланд где је радио на утврђивању вере и црквеног поретка.</p>
+      <p>Ступио је у Свету тајну брака са Татјаном рођ. Баћин, из Товаришева. Венчање су обавили епископи Василије и Лука, уз саслужење више свештеника, у храму Св. Алипија, у ман. Св. Саве у Илајну 30. јануара 1994. године. Са Татјаном је од Бога добио децу: Милуна 29. јануара 1995. Оливеру 13. јула 1996. и Данила 10. септембра 1997.</p>
+      <p>Актом Светог арх. синода СПЦ у Београду, Бр. 1468/ Зап. 784 од 20. маја 1994. постављен је за члана сталног Мисијског одбора при Светом архијерејском синоду. </p>
+      <p>У чин ђакона рукоположен је од Аустралијско-новозеландског епископа Луке у ман. Св. Саве у Илајну на дан св. апостола Стахија, Амплија и Урвина, 31/13 новембра 1994. а у чин свештеника на дан св. ап. Филипа и св. Григорија Паламе, 14/27 новембра 1994. у храму Св. Тројице у Мелбурну.</p>
+      <p>	Епископ Лука је оца Србољуба поставио 1. децембра 1994. године, за привременог пароха и старешину храма Св. архиђакона Стефана у Рути Хилу, Сиднеј. Ту је радио на организацији изградње великог паркинга (од око 100 места) и потпуној обнови парохијског храма. Активно учествује у Одбору Пензионерског насеља Св. Симеон са 40 соба при овој парохији.</p>
+      <p>	Осим парохијских дужности и задатака, Епархијски управни одбор је на својој седници од 10. фебруара 1995. године, ставио у дужност о. Србољубу да испита потребу и могућност оснивања приватне школе у Сиднеју. Након више година рада и настојања, о. Срба је успео да половином 1999. године формира  Одбор за оснивање Српског православног колеџа Св. Сава у Сиднеју при ЦШО Св. архиђакон Стефан у Рути Хилу. Предлог Правила Колеџа, као и списак чланова Одбора, о. Срба је доставио на одобрење ЕУО, 7. августа 1999. године. Споро али ипак постепено, подршка шире заједнице овом пројекту је расла и убрзо је одлучено да Колеџ буде Епархијски пројекат, а да у њему узму учешћа ЦШО из Сиднеја из обе епархије. Након неколико година рада, купљено је у Западном Сиднеју имање од 186 акара (око 75 ха) за прву српску православну приватну школу - Колеџ Св. Сава.</p>
+      <p>	Као свештеник, о. Србољуб је био дугогодишњи члан епархијских тела: ЕУО, Законодавног одбора, Просветног и издавачког и т.д. Држао је реферате и предавања на братским састанцима и семинарима свештенства обе епархије, био дугогодишњи духовник Братства Вл. Николаја при храму Св. Стефана у Рути Хилу, које деценијама из Аустралије шаље стипендије и новчану помоћ црквено-просветним установама у Отаџбини.</p>
+      <p>	Поред дужности у парохији Св. архиђакона Стефана, епископ Лука је 15. маја 1998. поставио о. Србољуба за администратора Прве црквене општине Св. Сава у Варивуду и Мона Вејлу, северни Сиднеј. Током 1997. године, избио је сукоб између чланова Управног одбора ове ЦШО. Тадашња управа је сазвала Годишњу скупштину (8. марта 1998.) на којој су прихваћена нова правила којима се она стављала ван јурисдикције ове Епархије, и уопште целе СПЦ. Следећих 5 година, о. Срба је заједно са верним члановима Српске цркве водио судски спор који је Божијом помоћу окончан 30. априла 2003. године, у корист Цркве. </p>
+      <p>За лични допринос црквеној општини Св. Сава у Варивуду и Мона Вејлу, као и за успешан и одговоран рад у Епархији аустралијско-новозеландској, о. Срба је унапређен у чин протојереја на Светој архијерејској литургији у храму Св. Саве на Еланори, од стране Епископа Никанора 27. јула 2003. године.</p>
+      <p>До данас (2005. год.) прота Србољуб Милетић се налази на положају старешина храма Св. Стефана у Рути Хилу, као и на другим дужностима у Епархији аустралијско-новозеландској.</p>
+      <p>О. Србољуб је члан Уредништва сајта Светосавље од 2002. године.</p>
+      <p>&nbsp;</p></td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td class="helper" align="right" height="20"><table cellSpacing="0" cellPadding="10" width="100%" border="0">
+       <tr>
+        <td vAlign="bottom" width="215"><em><font size="1">© 2003 Светосавље.орг<br>
+         Сва права задржана.</font></em></td>
+        <td class="helper" vAlign="top" align="right" width="243">[<a href="../index.php" class="helpernav">Светосавље.орг</a>]<br>
+         [<a href="../biblioteka/index.htm" class="helpernav">Библиотека</a>]<br>
+	 [<a href="../molitve/index.php" class="helpernav">Молитве</a>]<br>
+         [<a href="../riznice/index.htm" class="helpernav">Ризнице</a>]<br>
+         [<a href="../pojanje/index.htm" class="helpernav">Појање</a>]<br>
+         [<a href="../svetinje/index.htm" class="helpernav">Светиње</a>]<br>
+         [<a href="../slovenski/index.htm" class="helpernav">ЦрквеноСловенски језик</a>]<br>
+         [<a href="../pastir/index.php" class="helpernav">Питање пастиру</a>]<br>
+	 [<a href="http://blogs.svetosavlje.org/vesti/" class="helpernav">Вести</a>]<br>
+         [<a href="../lista/index.php" class="helpernav">Листа</a>]<br>
+         [<a href="../roditelji/uvodnik.html" class="helpernav">Родитељска Листа</a>]<br>
+         [<a href="http://www.svedokverni.org/" class="helpernav">Мисија</a>]</td>
+        <td width="66" valign="top" class="helper">[<a href="../uvodnik.htm" class="helpernav">Уводник</a>]<br>
+         [<a href="../novosti.asp" class="helpernav">Новости</a>]<br>
+         [<a href="../mapa.htm" class="helpernav">Мапа</a>]<br>
+         [<a href="../adresar/index.asp" class="helpernav">Адресар</a>]<br>
+         [<a href="../komentar/index.asp" class="helpernav">Коментар</a>]<br>
+         [<a href="../pomoc/index.htm" class="helpernav">Помоћ</a>]</td>
+       </tr>
+      </table></td>
+    </tr>
+   </table></td>
+ </tr>
+</table>
+<map name="Map">
+  <area shape="rect" coords="38,16,137,34" href="../biblioteka/index.htm">
+  <area shape="rect" coords="64,44,140,66" href="../molitve/index.php">
+  <area shape="rect" coords="67,79,141,97" href="../riznice/index.htm">
+  <area shape="rect" coords="77,110,140,128" href="../pojanje/index.htm">
+  <area shape="rect" coords="61,143,140,161" href="../svetinje/index.htm">
+  <area shape="rect" coords="62,175,141,226" href="../slovenski/index.htm">
+  <area shape="rect" coords="67,237,139,273" href="../pastir/index.php">
+  <area shape="rect" coords="75,287,139,305" href="http://blogs.svetosavlje.org/vesti/">
+  <area shape="rect" coords="74,319,138,337" href="../lista/index.php">
+  <area shape="rect" coords="36,345,143,384" href="../roditelji/uvodnik.html">
+  <area shape="rect" coords="80,394,145,415" href="http://www.svedokverni.org/">
+</map>
+</body>
+<!-- body ends -->
