--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacRade.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/OtacRade.cshtml
@@ -2,4 +2,95 @@
     ViewBag.Title = "OtacRade";
 }
 
-<h2>OtacRade</h2>
+<h2>Отац Раде</h2>
+
+<!-- body begins -->
+<body leftMargin="0" background="../bmp/bck.gif" topMargin="0" marginheight="0" marginwidth="0">
+<table cellSpacing="0" cellPadding="0" width="760" border="0">
+ <tr>
+  <td vAlign="top" width="155" bgColor="#FFF9F3"> <table cellSpacing="0" cellPadding="0" width="155" bgColor="#fcfaf1" border="0">
+    <tr>
+     <td><IMG height="245" alt="Свети Јустин Ћелијски" src="../bmp/avva.gif" width="155"></td>
+    </tr>
+    <tr>
+     <td><img src="../bmp/izbornik.gif" width="155" border="0" usemap="#Map"></td>
+    </tr>
+   </table></td>
+  <td width="1" bgColor="#000000"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+  <td width="1"><IMG height="1" src="../bmp/spacer.gif" width="20"></td>
+  <td vAlign="top" width="100%"><table cellSpacing="0" cellPadding="0" width="100%" border="0">
+    <tr>
+     <td class="helper" align="left" height="20"><A class="helpernav" href="../uvodnik.htm">Уводник</A> :: <A class="helpernav" href="../novosti.asp">Новости</A> :: <A class="helpernav" href="../mapa.htm">Мапа</A> :: <A class="helpernav" href="../adresar/index.asp"> Адресар</A> :: <A class="helpernav" href="../komentar/index.asp">Коментар</A> :: <A class="helpernav" href="../pomoc/index.htm"> Помоћ</A>&nbsp;&nbsp;</td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td align="right"><IMG height="118" hspace="20" src="../bmp/pastiru.gif" width="216" vspace="5"></td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td class="helper" height="20"><A class="helpernav" href="../index.php">Светосавље.орг</A>:: <A class="helpernav" href="index.asp">Питање пастиру</A></td>
+    </tr>
+    <tr>
+     <td><p>&nbsp;</p>
+      <p><img src="bmp/o_rade.jpg" hspace="2" vspace="2" border="1" align="left" style="margin:2px 10px 5px 0px;"></p>
+      <h3>Протојереј<br>Раде Вимбиш</h3>
+      <p>
+      је рођен 2. децембра 1955, у Лос Анђелесу, Калифорнија САД, од оца Едвина и мајке Десанке (Самарџић). 
+Завршио је основну школу и гимназију у Монтебелу, округ Лос Анђелеса, где је и живео. Потом је завршио први степен факултета (А. А.) у Колеџу Рио Хондо, након чега се уписао на Теолошки Факултет СПЦ у Београду, где је дипломирао 1985. Након тога се вратио у Западноамеричку Епархију СПЦ, где је служио као ђакон при саборној цркви Св. Стефан Првовенчани у Алхамбри, Калифорнија, и Епархијски секретар. 
+У чин свештеника је рукопложен 1986. године и постављен на парохију Св. Саве у Купертину, Калифорнија, а потом на новоосновану парохију Покрова Пресвете Богородице у Санта Клари, Калифорнија, до 2005. године, када се због здравствених проблема пензионисао.  По пензионисању се вратио у Србију и сада живи у Крагујевцу.
+      </p>
+	  	  
+      <p>&nbsp;</p>
+      <p>&nbsp;</p></td>
+    </tr>
+    <tr>
+     <td bgColor="#000000" height="1"><IMG height="1" src="../bmp/spacer.gif" width="1"></td>
+    </tr>
+    <tr>
+     <td class="helper" align="right" height="20"><table cellSpacing="0" cellPadding="10" width="100%" border="0">
+       <tr>
+        <td vAlign="bottom" width="215"><em><font size="1">© 2003 Светосавље.орг<br>
+         Сва права задржана.</font></em></td>
+        <td class="helper" vAlign="top" align="right" width="243">[<a href="../index.php" class="helpernav">Светосавље.орг</a>]<br>
+         [<a href="../biblioteka/index.htm" class="helpernav">Библиотека</a>]<br>
+	 [<a href="../molitve/index.php" class="helpernav">Молитве</a>]<br>
+         [<a href="../riznice/index.htm" class="helpernav">Ризнице</a>]<br>
+         [<a href="../pojanje/index.htm" class="helpernav">Појање</a>]<br>
+         [<a href="../svetinje/index.htm" class="helpernav">Светиње</a>]<br>
+         [<a href="../slovenski/index.htm" class="helpernav">ЦрквеноСловенски језик</a>]<br>
+         [<a href="../pastir/index.php" class="helpernav">Питање пастиру</a>]<br>
+	 [<a href="http://blogs.svetosavlje.org/vesti/" class="helpernav">Вести</a>]<br>
+         [<a href="../lista/index.php" class="helpernav">Листа</a>]<br>
+         [<a href="../roditelji/uvodnik.html" class="helpernav">Родитељска Листа</a>]<br>
+         [<a href="http://www.svedokverni.org/" class="helpernav">Мисија</a>]</td>
+        <td width="66" valign="top" class="helper">[<a href="../uvodnik.htm" class="helpernav">Уводник</a>]<br>
+         [<a href="../novosti.asp" class="helpernav">Новости</a>]<br>
+         [<a href="../mapa.htm" class="helpernav">Мапа</a>]<br>
+         [<a href="../adresar/index.asp" class="helpernav">Адресар</a>]<br>
+         [<a href="../komentar/index.asp" class="helpernav">Коментар</a>]<br>
+         [<a href="../pomoc/index.htm" class="helpernav">Помоћ</a>]</td>
+       </tr>
+      </table></td>
+    </tr>
+   </table></td>
+ </tr>
+</table>
+<map name="Map">
+  <area shape="rect" coords="38,16,137,34" href="../biblioteka/index.htm">
+  <area shape="rect" coords="64,44,140,66" href="../molitve/index.php">
+  <area shape="rect" coords="67,79,141,97" href="../riznice/index.htm">
+  <area shape="rect" coords="77,110,140,128" href="../pojanje/index.htm">
+  <area shape="rect" coords="61,143,140,161" href="../svetinje/index.htm">
+  <area shape="rect" coords="62,175,141,226" href="../slovenski/index.htm">
+  <area shape="rect" coords="67,237,139,273" href="../pastir/index.php">
+  <area shape="rect" coords="75,287,139,305" href="http://blogs.svetosavlje.org/vesti/">
+  <area shape="rect" coords="74,319,138,337" href="../lista/index.php">
+  <area shape="rect" coords="36,345,143,384" href="../roditelji/uvodnik.html">
+  <area shape="rect" coords="80,394,145,415" href="http://www.svedokverni.org/">
+</map>
+</body>
+<!-- body ends -->
